added github repo link

--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
         A programming language that combines the simplicity of Python and the
         structure of Java
       </p>
-      <button
+      <a
         class="button button1"
-        style="font-weight: bold; font-size: 19px">
+        style="font-weight: bold; font-size: 19px"
+        href="https://github.com/tmarktg/pya">
         More on Github
-      </button>
-      <button
+      </a>
+      <a
         class="button button2"
         style="font-weight: bold; font-size: 19px">
         Download
-      </button>
+      </a>
       <div class="divider-container">
         <hr />
       </div>
@@ -91,11 +92,11 @@
       <h4 style="font-size: 20px; font-weight: normal; margin-bottom: 22.5px">
         Download the markup
       </h4>
-      <button
+      <a
         class="button button2"
         style="font-weight: bold; font-size: 19px; margin-bottom: 100px">
         Download
-      </button>
+      </a>
       <footer>
         <p>Author: Mark Truong<br /></p>
         <p>Copyright © 2024</p>
