added github repo link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a
         class="button button1"
         style="font-weight: bold; font-size: 19px"
-        href="https://github.com/tmarktg/pya">
+        href="https://github.com/tmarktg/pyva">
         More on Github
       </a>
       <a
@@ -94,7 +94,8 @@
       </h4>
       <a
         class="button button2"
-        style="font-weight: bold; font-size: 19px; margin-bottom: 100px">
+        style="font-weight: bold; font-size: 19px; margin-bottom: 100px"
+        href="https://github.com/tmarktg/pyva">
         Download
       </a>
       <footer>
